--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,10 @@ reqwest = { version = "0.11", default-features = false, features = [
     "rustls-tls",
 ] }
 rand = { version = "0.8", features = ["std_rng"] }
+htmlescape = "0.3"
+hmac = { version = "0.12", features = ["std"] }
+hex = "0.4"
+sha2 = "0.10"
 
 [dev-dependencies]
 once_cell = "1"
